@@ -32,6 +32,7 @@
 		Patches are linked at http://nethackwiki.com/wiki/User:Bulwersator/UnNetHackPlus_bug_tracking
 	* UnNetHack bug fixes
 		- Angered quest guardians will no longer go berserk.
+		- #152 Wishing for unknown dragon scales with its actual name results in dragon scale mail (outside of debug mode)
 	* Flavour stuff
 		- Far look during hallucination should be more amusing
 		- New hallucinatory monsters, monster sounds (original ones and from NAO) and bottle types
